--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = ARF
 	url = https://github.com/efficient/ARF.git
 	branch = master
+[submodule "tlx"]
+	path = tlx
+	url = https://github.com/tlx/tlx.git
