--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "tlx"]
 	path = tlx
 	url = https://github.com/tlx/tlx.git
+[submodule "perfevent"]
+	path = perfevent
+	url = https://github.com/viktorleis/perfevent.git
