Prevent perf_bench from building on MacOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,12 +47,12 @@ add_executable(simple_example simple_example.cpp)
 target_link_libraries(simple_example surf)
 
 add_executable(simple_bench simple_bench.cpp)
-#find_library(tlxLib libtlx.a PATHS ${CMAKE_SOURCE_DIR}/build/tlx/tlx)
 target_link_libraries(simple_bench surf tlx)
 
-add_executable(perf_bench perf_bench.cpp)
-#find_library(tlxLib libtlx.a PATHS ${CMAKE_SOURCE_DIR}/build/tlx/tlx)
-target_link_libraries(perf_bench surf tlx)
+if (NOT APPLE)
+    add_executable(perf_bench perf_bench.cpp)
+    target_link_libraries(perf_bench surf tlx)
+endif()
 
 include("${CMAKE_SOURCE_DIR}/src/local.cmake")
 include("${CMAKE_SOURCE_DIR}/test/unitTest/local.cmake")
